[gd_scene load_steps=3 format=3 uid="uid://lxd4gdjehao6"]

[ext_resource type="Script" uid="uid://ctpsaje8v67x7" path="res://resources/test/base_module.gd" id="1_bb13j"]
[ext_resource type="Texture2D" uid="uid://cebls10obicuf" path="res://icon.svg" id="1_vc3yi"]

[node name="base_module" type="Node2D"]
script = ExtResource("1_bb13j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_vc3yi")

[node name="up_marker" type="Marker2D" parent="."]
position = Vector2(0, -64)

[node name="down_marker" type="Marker2D" parent="."]
position = Vector2(0, 64)

[node name="left_marker" type="Marker2D" parent="."]
position = Vector2(-64, 0)

[node name="right_marker" type="Marker2D" parent="."]
position = Vector2(64, 0)

[node name="sub_modules" type="Node2D" parent="."]
